prevent font scaling on mobile in landscape

--- a/beacon-hill-theme.css
+++ b/beacon-hill-theme.css
@@ -17,22 +17,23 @@
 /* line 5, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 html {
   scroll-behavior: smooth;
+  -webkit-text-size-adjust: 100%;
 }
 
-/* line 8, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 9, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 html, body {
   background: #fff;
   color: #555;
   margin: 0;
 }
 
-/* line 13, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 14, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 body {
   font-family: 'Futura', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   letter-spacing: 0.2px;
 }
 
-/* line 18, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 19, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 h1 {
   font-family: 'Bosox Full';
   font-size: 6rem;
@@ -41,7 +42,7 @@ h1 {
   margin: 0;
 }
 
-/* line 25, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 26, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 .overline, .underline {
   color: #ccc;
   font-size: 1.1rem;
@@ -49,17 +50,17 @@ h1 {
   margin-left: 25px;
 }
 
-/* line 32, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 33, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 .overline {
   margin-bottom: -3px;
 }
 
-/* line 36, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 37, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 .underline {
   margin-top: -22px;
 }
 
-/* line 40, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 41, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 h2 {
   background: #fff;
   margin-left: -30px;
@@ -70,12 +71,12 @@ h2 {
   z-index: 1;
 }
 
-/* line 50, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 51, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 .title {
   padding: 25px 0 50px;
 }
 
-/* line 53, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 54, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 section p {
   max-width: 740px;
   font-family: 'Vollkorn', serif;
