--- a/styles/_base.sass
+++ b/styles/_base.sass
@@ -4,6 +4,7 @@
 
 html
 	scroll-behavior: smooth
+	-webkit-text-size-adjust: 100% /* Prevent font scaling in landscape while allowing user zoom */
 
 html, body 
 	background: #fff
